gccida/c1/etoasc
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/etoasc/src/real.c:5611:15: error: use of undeclared identifier 'off_6C5406'
sprintf( v27, off_6C5406, v37); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/etoasc/src/obj/real.o] Error 1
